fixed some spacing, renamed matchedCards to matchCount

--- a/styles/sass/_03header.scss
+++ b/styles/sass/_03header.scss
@@ -37,7 +37,7 @@ h1 {
   //hover/focus states
   &:hover,
   &:focus {
-    transform: scale(1.1);
+    transform: scale(1.01);
   }
   // active
   &:active {
