--- a/styles/sass/_04gameBoard.scss
+++ b/styles/sass/_04gameBoard.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   display: flex;
   background-color: #FAFAFA;
-  margin: 5px auto;
+  display: flex;
 
   &.hide {
     display: none;
