--- a/styles/styles.css
+++ b/styles/styles.css
@@ -319,8 +319,8 @@ h1 {
 }
 
 .startButton:hover, .startButton:focus {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  -webkit-transform: scale(1.01);
+          transform: scale(1.01);
 }
 
 .startButton:active {
@@ -334,7 +334,7 @@ h1 {
   display: -ms-flexbox;
   display: flex;
   background-color: #FAFAFA;
-  margin: 5px auto;
+  display: flex;
 }
 
 .gameBoard.hide {
